--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             target="_blank"
             style="
               --bg-img: url('../assets/covers/cov_gravitation.png');
-              background-position: 20%;
+              background-position: 20%
             "
           >
             <div>
@@ -89,7 +89,7 @@
             target="_blank"
             style="
               --bg-img: url('../assets/covers/cov_acceleration.png');
-              background-position: 30%;
+              background-position: 30%
             "
           >
             <div>
@@ -109,7 +109,7 @@
             target="_blank"
             style="
               --bg-img: url('../assets/covers/cov_feather.png');
-              background-position: left;
+              background-position: left
             "
           >
             <div>
@@ -128,7 +128,7 @@
             target="_blank"
             style="
               --bg-img: url('../assets/covers/cov_wind.png');
-              background-position: 45%;
+              background-position: 45%
             "
           >
             <div>
@@ -147,7 +147,7 @@
             target="_blank"
             style="
               --bg-img: url('../assets/covers/cov_archimedes.png');
-              background-position: left;
+              background-position: left
             "
           >
             <div>
@@ -166,7 +166,7 @@
             target="_blank"
             style="
               --bg-img: url('../assets/covers/cov_transformer.png');
-              background-position: left;
+              background-position: left
             "
           >
             <div>
